--- a/src/components/hero/Hero.scss
+++ b/src/components/hero/Hero.scss
@@ -1,7 +1,7 @@
 .hero {
   --spacer: 1.5vh;
   --timer: 0.5s;
-  z-index: 2;
+  z-index: 1;
   position: relative;
 
   //color: var(--clr-neutral-200);
@@ -34,7 +34,7 @@
     opacity: 0;
     animation: fadeInFromBottom var(--timer) ease-out 0.5s normal forwards;
     transform: translateY(-10vh);
-
+    position: fixed;
     // name font
     h2 {
       font-family: "Jost";
